--- a/quarto/derivatives/first_second_derivatives.qmd
+++ b/quarto/derivatives/first_second_derivatives.qmd
@@ -775,6 +775,73 @@ radioq(choices, answ)
 
 ###### Question
 
+Consider the following figure of a graph of $f$:
+
+```{julia}
+#| echo: false
+ex(x) = x * tanh(exp(x))
+a, b = -5, 1
+plot(ex, a, b, legend=false,
+     axis=([], false),
+     color = :royalblue
+     )
+plot!([a-.1, b+.1], [0,0], line=(3, :black))
+
+zs  = find_zeros(ex, (a, b))
+cps = find_zeros(ex', (a, b))
+ips = find_zeros(ex'', (a, b))
+
+scatter!(zs,  ex.(zs),  marker=(5, "black", :circle))
+scatter!(cps, ex.(cps), marker=(5, "forestgreen", :diamond))
+scatter!(ips, ex.(ips), marker=(5, :brown3, :star5))
+```
+
+The black circle denotes what?
+
+```{julia}
+choices = [raw"A zero of $f$",
+           raw"A critical point of $f$",
+           raw"An inflection point of $f$"]
+answ = 1
+radioq(choices, answ)
+```
+
+
+The black circle denotes what?
+
+```{julia}
+choices = [raw"A zero of $f$",
+           raw"A critical point of $f$",
+           raw"An inflection point of $f$"]
+answ = 1
+radioq(choices, answ)
+```
+
+
+The green diamond denotes what?
+
+```{julia}
+choices = [raw"A zero of $f$",
+           raw"A critical point of $f$",
+           raw"An inflection point of $f$"]
+answ = 2
+radioq(choices, answ)
+```
+
+
+The red stars denotes what?
+
+```{julia}
+choices = [raw"Zeros of $f$",
+           raw"Critical points of $f$",
+           raw"Inflection points of $f$"]
+answ = 3
+radioq(choices, answ)
+```
+
+
+###### Question
+
 
 If it is known that:
 
@@ -1040,7 +1107,8 @@ This accurately summarizes how the term is used outside of math books. Does it a
 #| echo: false
 choices = ["Yes. Same words, same meaning",
            """No, but it is close. An inflection point is when the *acceleration* changes from positive to negative, so if "results" are about how a company's rate of change is changing, then it is in the ballpark."""]
-radioq(choices, 2)
+answ = 2
+radioq(choices, answ)
 ```
 
 ###### Question
@@ -1054,5 +1122,6 @@ The function $f(x) = x^3 + x^4$ has a critical point at $0$ and a second derivat
 #| echo: false
 choices = ["As ``x^3`` has no extrema at ``x=0``, neither will ``f``",
            "As ``x^4`` is of higher degree than ``x^3``, ``f`` will be ``U``-shaped, as ``x^4`` is."]
-radioq(choices, 1)
+answ = 1
+radioq(choices, answ)
 ```
