--- a/quarto/integrals/twelve-qs.qmd
+++ b/quarto/integrals/twelve-qs.qmd
@@ -26,13 +26,16 @@ function make_plot(a₀=7/8, q₀=-a₀ - 1/2a₀)
                aspect_ratio=:equal, border=:none, legend=false)
     f(x) = x^2
     fp(x) = 2x
-    plot!(f, -1.5, 1.5)
-    plot!(zero)
+
+    plot!(f, -1.5, 1.5, line=(1, :royalblue))
+    plot!(zero, line=(1, :black))
 
     tl = x -> f(a₀) + fp(a₀) * (x-a₀)
     nl = x -> f(a₀) - 1/(fp(a₀)) * (x-a₀)
-    plot!(tl, -0.02, 1.6; linecolor=:black)
-    plot!(nl, -1.6, 1; linecolor=:black)
+
+    plot!(tl, -0.02, 1.6; line=(1, :forestgreen))
+    plot!(nl, -1.6, 1;    line=(1, :forestgreen))
+
     # add in right triangle
     scatter!([a₀, q₀], f.([a₀, q₀]), markersize=5)
     Δ = 0.01
