--- a/quarto/precalc/calculator.qmd
+++ b/quarto/precalc/calculator.qmd
@@ -207,6 +207,7 @@ The authors note in a supplement to their paper that over 15,700 species and sub
 (3.02 * 10^15 + 1.34*10^15) * 100 / 22
 ```
 
+The answer is in *scientific notation$ and reads as $1.89\dots \cdot 10^16$.
 Shifting the decimal point, this gives a value rounded to $20\cdot 10^{15}$ ants.
 
 The authors used a value for the *dry weight* of an average (and representative) single ant. What was that value? (Which they indicate is perhaps unreliable,
@@ -216,7 +217,7 @@ as, for example, small-bodied ants may be much more abundant than large-bodied a
 (12 * 1_000_000 * 1_000 * 1_000) / 20_000_000_000_000_000
 ```
 
-Which translates to an *average* dry *carbon* weight of $0.6/1000$ grams, that is $0.6$ milligrams ($0.62$ mg C was actually used).
+Which translates to an *average* dry *carbon* weight of $0.6/1000$ grams, that is $0.6$ milligrams ($0.62$ mg C was actually used). The underscores in `20_000_000_000_000_000` are *ignored* when parsed and are only for readability. This is a readable alternate to scientific notation for large numbers.
 
  The authors write that insects are generally considered to have a dry weight of 30% wet weight, and a carbon weight of 50% dry weight, so the weight in grams of an *average* living ant would be multiplied by $2$ and then $10/3$:
 
@@ -227,8 +228,6 @@ Which translates to an *average* dry *carbon* weight of $0.6/1000$ grams, that i
 That is 4 milligrams, or 250 ants per gram on average.
 
 Numeric combinations, as above, will be easier to check for correctness when variable names are assigned to the respective values.
-
-Using the underscore, as above, to separate groups of digits, is helpful, as an alternate to scientific notation, when working with large numbers.
 
 
 
@@ -326,7 +325,7 @@ $$
 \frac{1 + 2}{3 + 4}?
 $$
 
-It would have to be computed through $(1 + 2) / (3 + 4)$.  This is because unlike `/`, the implied order of operation in the mathematical notation with the *horizontal division symbol* (the [vincula](http://tinyurl.com/y9tj6udl)) is to compute the top and the bottom and then divide. That is, the vincula is a grouping notation like parentheses, only implicitly so. Thus the above expression really represents the more verbose:
+It would have to be computed through $(1 + 2) / (3 + 4)$.  This is because unlike `/`, the implied order of operation in the mathematical notation with the *horizontal division symbol* (the [vinculum](http://tinyurl.com/y9tj6udl)) is to compute the top and the bottom and then divide. That is, the vincula is a grouping notation like parentheses, only implicitly so. Thus the above expression really represents the more verbose:
 
 
 $$
@@ -368,7 +367,7 @@ In `Julia` many infix operations can be done using a prefix manner. For example 
 ## Constants
 
 
-The Google calculator has two built in constants, `e` and `π`. Julia provides these as well, though not quite as easily. First,  `π` is just `pi`:
+The Google calculator has two built in constants, `e` and `π`. Julia provides these as well, though not quite as easily, as they have names and not dedicated buttons. First,  `π` is just `pi`:
 
 
 ```{julia}
@@ -407,7 +406,7 @@ In most cases. There are occasional (basically rare) spots where using `pi` by i
 ### Numeric literals
 
 
-For some special cases, Julia parses *multiplication* without a multiplication symbol. This is when the value on the left is a number, as in `2pi`, which has an equivalent value to `2*pi`. *However* the two are not equivalent, in that multiplication with *numeric literals* does not have the same precedence as regular multiplication - it is higher. This has practical importance when used in division or powers. For instance, these two are **not** the same:
+For some special cases, Julia parses *multiplication* without a multiplication symbol. One case is when the value on the left is a number, as in `2pi`, which has an equivalent value to `2*pi`. *However* the two are not equivalent, in that multiplication with *numeric literals* does not have the same precedence as regular multiplication - it is higher. This has practical importance when used in division or powers. For instance, these two expressions are **not** the same:
 
 
 ```{julia}
@@ -485,7 +484,9 @@ Using a function is very straightforward. A function is called using parentheses
 sqrt(4), sqrt(5)
 ```
 
-The function is referred to by name (`sqrt`) and called with parentheses. Any arguments are passed into the function using commas to separate values, should there be more than one. When there are numerous values for a function, the arguments may need to be given in a specific order or may possibly be specified with *keywords*. (A semicolon can be used instead of a comma to separate keyword arguments.)
+The function is referred to by name (`sqrt`) and called with parentheses.
+
+Any arguments are passed into the function using commas to separate values, should there be more than one. When there are numerous values for a function, the arguments may need to be given in a specific order or may possibly be specified with *keywords*. (A semicolon can be used instead of a comma to separate keyword arguments from positional arguments.)
 
 
 Some more examples:
