--- a/quarto/precalc/numbers_types.qmd
+++ b/quarto/precalc/numbers_types.qmd
@@ -174,11 +174,11 @@ You can discover more about the range of floating point values provided by calli
   * `typemax(0.0)` gives the largest value for the type (`Inf` in this case).
   * `prevfloat(Inf)` gives the largest finite one, in general `prevfloat` is the next smallest floating point value.
 
-:::
-
   * `nextfloat(-Inf)`, similarly,  gives the smallest finite floating point value, and in general returns the next largest floating point value.
   * `nextfloat(0.0)` gives the closest positive value to 0.
   * `eps()`  gives the distance to the next floating point number bigger than `1.0`. This is sometimes referred to as machine precision.
+
+:::
 
 
 #### Scientific notation
@@ -298,7 +298,7 @@ That is adding `1/10` and `2/10` is not exactly `3/10`, as expected mathematical
 1/10 + (2/10 + 3/10) == (1/10 + 2/10) + 3/10
 ```
 
-  * Mathematically, or real numbers, subtraction of similar-sized numbers is not exceptional, for example $1 - \cos(x)$ is positive if $0 < x < \pi/2$, say. This will not be the case for floating point values. If $x$ is close enough to $0$, then $\cos(x)$ and $1$ will be so close, that they will be represented by the same floating point value, `1.0`, so the difference will be zero:
+  * Mathematically, for real numbers, subtraction of similar-sized numbers is not exceptional, for example $1 - \cos(x)$ is positive if $0 < x < \pi/2$, say. This will not be the case for floating point values. If $x$ is close enough to $0$, then $\cos(x)$ and $1$ will be so close, that they will be represented by the same floating point value, `1.0`, so the difference will be zero:
 
 
 ```{julia}
