--- a/quarto/precalc/ranges.qmd
+++ b/quarto/precalc/ranges.qmd
@@ -140,11 +140,11 @@ Floating point roundoff leads to the last value *exceeding* `0.6`, so should it 
 Enter the base function `range` which solves this seemingly simple - but not really - task. It can use `a`, `b`, and `n`. Like the range operation, this function returns a generator which can be collected to realize the values.
 
 
-The number of points is specified with keyword arguments, as in:
+The number of points is specified as a third argument (though keyword arguments can be given):
 
 
 ```{julia}
-xs = range(-1, 1, length=9)  # or simply range(-1, 1, 9) as of v"1.7"
+xs = range(-1, 1,9)
 ```
 
 and
