--- a/quarto/precalc/trig_functions.qmd
+++ b/quarto/precalc/trig_functions.qmd
@@ -160,7 +160,7 @@ This basic fact can be manipulated many ways. For example, dividing through by $
 [cos(theta) for theta in [0, pi/6, pi/4, pi/3, pi/2]]
 ```
 
-To compute $\sin^2(\theta)$, the power is applied to the value of $\sin(\theta)$ and not the `sin` function. (Think of $\sin^2(\theta)$ as $(sin(\theta))^2$:
+To compute $\sin^2(\theta)$, the power is applied to the value of $\sin(\theta)$ and not the `sin` function. (Think of $\sin^2(\theta)$ as $(\sin(\theta))^2$:
 
 ```{julia}
 theta = pi/8
@@ -984,6 +984,18 @@ radioq(choices, answ, keep_order=true)
 
 ###### Question
 
+The function `f(x) = x * tanh(exp(x))` has a shape akin to `max(0,x)` but is smoooth. Graphically finds its smallest $y$ value.
+
+```{julia}
+#| echo: false
+f(x) = x * tanh(exp(x))
+val = -0.35328577784821125
+numericq(val, 1e-1)
+```
+
+
+###### Question
+
 
 The hyperbolic sine satisfies this formula:
 
@@ -1016,3 +1028,4 @@ Is this identical to the pattern for the regular sine function?
 #| echo: false
 yesnoq(false)
 ```
+
